docs/api/qiskit-ibm-runtime/0.48/runtime-job-v2.mdx
---
title: RuntimeJobV2 (v0.48)
description: API reference for qiskit_ibm_runtime.RuntimeJobV2 in qiskit-ibm-runtime v0.48
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit_ibm_runtime.RuntimeJobV2
---

# RuntimeJobV2

<Class id="qiskit_ibm_runtime.RuntimeJobV2" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.48/qiskit_ibm_runtime/runtime_job_v2.py#L58-L302" signature="RuntimeJobV2(backend, api_client, job_id, program_id, service, creation_date=None, result_decoder=None, image='', session_id=None, tags=None, version=None, private=False)" modifiers="class">
  Bases: [`BasePrimitiveJob`](/docs/api/qiskit/qiskit.primitives.BasePrimitiveJob)\[[`PrimitiveResult`](/docs/api/qiskit/qiskit.primitives.PrimitiveResult), `Literal`\[‘INITIALIZING’, ‘QUEUED’, ‘RUNNING’, ‘CANCELLED’, ‘DONE’, ‘ERROR’]], `BaseRuntimeJob`

  Representation of a runtime V2 primitive execution.

  **Parameters**

  *   **backend** (*Backend*) – The backend instance used to run this job.
  *   **api\_client** (*RuntimeClient*) – Object for connecting to the server.
  *   **job\_id** (*str*) – Job ID.
  *   **program\_id** (*str*) – ID of the program this job is for.
  *   **creation\_date** (*str | None*) – Job creation date, in UTC.
  *   **result\_decoder** (*type\[ResultDecoder] | Sequence\[type\[ResultDecoder]] | None*) – A `ResultDecoder` subclass used to decode job results, or a list of such subclasses. If more than one decoder is specified, they will be called in chain, with the output of the `n-th` decoder as the input of the `n+1-th` decoder. If not specified, the default `ResultDecoder` is used.
  *   **image** (*str | None*) – Runtime image used for this job: image\_name:tag.
  *   **service** ([*qiskit\_runtime\_service.QiskitRuntimeService*](qiskit-runtime-service "qiskit_ibm_runtime.qiskit_runtime_service.QiskitRuntimeService")) – Runtime service.
  *   **session\_id** (*str | None*) – Job ID of the first job in a runtime session.
  *   **tags** (*list | None*) – Tags assigned to the job.
  *   **version** (*int | None*) – Primitive version.
  *   **private** (*bool | None*) – Marks job as private.

  Initializes the primitive job.

  **Parameters**

  *   **job\_id** (*str*) – A unique id in the context of the primitive used to run the job.
  *   **kwargs** – Any key value metadata to associate with this job.
  *   **backend** (*Backend*)
  *   **api\_client** (*RuntimeClient*)
  *   **program\_id** (*str*)
  *   **service** ([*qiskit\_runtime\_service.QiskitRuntimeService*](qiskit-runtime-service "qiskit_ibm_runtime.qiskit_runtime_service.QiskitRuntimeService"))
  *   **creation\_date** (*str | None*)
  *   **result\_decoder** (*type\[ResultDecoder] | Sequence\[type\[ResultDecoder]] | None*)
  *   **image** (*str | None*)
  *   **session\_id** (*str | None*)
  *   **tags** (*list | None*)
  *   **version** (*int | None*)
  *   **private** (*bool | None*)

  ## Attributes

  ### ERROR

  <Attribute id="qiskit_ibm_runtime.RuntimeJobV2.ERROR" attributeTypeHint="str | RuntimeJobStatus" attributeValue="'ERROR'" />

  ### JOB\_FINAL\_STATES

  <Attribute id="qiskit_ibm_runtime.RuntimeJobV2.JOB_FINAL_STATES" attributeTypeHint="tuple[JobStatus, ...]" attributeValue="('DONE', 'CANCELLED', 'ERROR')" />

  ### creation\_date

  <Attribute id="qiskit_ibm_runtime.RuntimeJobV2.creation_date">
    Job creation date in local time.

    **Returns**

    The job creation date as a datetime object, in local time, or `None` if creation date is not available.
  </Attribute>

  ### image

  <Attribute id="qiskit_ibm_runtime.RuntimeJobV2.image">
    Return the runtime image used for the job.

    **Returns**

    The runtime image `image_name:tag` or `""` if the default image is used.
  </Attribute>

  ### inputs

  <Attribute id="qiskit_ibm_runtime.RuntimeJobV2.inputs">
    Job input parameters.

    **Returns**

    Input parameters used in this job.
  </Attribute>

  ### instance

  <Attribute id="qiskit_ibm_runtime.RuntimeJobV2.instance">
    Return the IBM Cloud instance CRN.
  </Attribute>

  ### primitive\_id

  <Attribute id="qiskit_ibm_runtime.RuntimeJobV2.primitive_id">
    Primitive name.

    **Returns**

    Primitive this job is for.
  </Attribute>

  ### private

  <Attribute id="qiskit_ibm_runtime.RuntimeJobV2.private">
    Returns a boolean indicating whether or not the job is private.
  </Attribute>

  ### session\_id

  <Attribute id="qiskit_ibm_runtime.RuntimeJobV2.session_id">
    Session ID.

    **Returns**

    Session ID. None if the backend is a simulator.
  </Attribute>

  ### tags

  <Attribute id="qiskit_ibm_runtime.RuntimeJobV2.tags">
    Job tags.

    **Returns**

    Tags assigned to the job that can be used for filtering.
  </Attribute>

  ### usage\_estimation

  <Attribute id="qiskit_ibm_runtime.RuntimeJobV2.usage_estimation">
    Return the usage estimation information for this job.

    **Returns**

    `quantum_seconds` which is the estimated system execution time of the job in seconds. Quantum time represents the time that the system is dedicated to processing your job.
  </Attribute>

  ## Methods

  ### backend

  <Function id="qiskit_ibm_runtime.RuntimeJobV2.backend" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.48/qiskit_ibm_runtime/runtime_job_v2.py#L288-L302" signature="backend(timeout=None)">
    Return the backend where this job was executed. Retrieve data again if backend is None.

    **Raises**

    **IBMRuntimeError** – If a network error occurred.

    **Parameters**

    **timeout** (*float | None*)

    **Return type**

    Backend | None
  </Function>

  ### cancel

  <Function id="qiskit_ibm_runtime.RuntimeJobV2.cancel" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.48/qiskit_ibm_runtime/runtime_job_v2.py#L162-L175" signature="cancel()">
    Cancel the job.

    **Raises**

    *   **RuntimeInvalidStateError** – If the job is in a state that cannot be cancelled.
    *   **IBMRuntimeError** – If unable to cancel job.

    **Return type**

    None
  </Function>

  ### cancelled

  <Function id="qiskit_ibm_runtime.RuntimeJobV2.cancelled" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.48/qiskit_ibm_runtime/runtime_job_v2.py#L203-L205" signature="cancelled()">
    Return whether the job has been cancelled.

    **Return type**

    bool
  </Function>

  ### done

  <Function id="qiskit_ibm_runtime.RuntimeJobV2.done" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.48/qiskit_ibm_runtime/runtime_job_v2.py#L207-L209" signature="done()">
    Return whether the job has successfully run.

    **Return type**

    bool
  </Function>

  ### error\_message

  <Function id="qiskit_ibm_runtime.RuntimeJobV2.error_message" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.48/qiskit_ibm_runtime/base_runtime_job.py#L218-L225" signature="error_message()">
    Returns the reason if the job failed.

    **Returns**

    Error message string or `None`.

    **Return type**

    str | None
  </Function>

  ### errored

  <Function id="qiskit_ibm_runtime.RuntimeJobV2.errored" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.48/qiskit_ibm_runtime/runtime_job_v2.py#L211-L213" signature="errored()">
    Return whether the job has failed.

    **Return type**

    bool
  </Function>

  ### in\_final\_state

  <Function id="qiskit_ibm_runtime.RuntimeJobV2.in_final_state" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.48/qiskit_ibm_runtime/runtime_job_v2.py#L215-L217" signature="in_final_state()">
    Return whether the job is in a final job state such as `DONE` or `ERROR`.

    **Return type**

    bool
  </Function>

  ### job\_id

  <Function id="qiskit_ibm_runtime.RuntimeJobV2.job_id" signature="job_id()">
    Return a unique id identifying the job.

    **Return type**

    str
  </Function>

  ### logs

  <Function id="qiskit_ibm_runtime.RuntimeJobV2.logs" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.48/qiskit_ibm_runtime/runtime_job_v2.py#L223-L242" signature="logs()">
    Return job logs.

    <Admonition title="Note" type="note">
      Job logs are only available after the job finishes.
    </Admonition>

    **Returns**

    Job logs, including standard output and error.

    **Raises**

    **IBMRuntimeError** – If a network error occurred.

    **Return type**

    str
  </Function>

  ### metrics

  <Function id="qiskit_ibm_runtime.RuntimeJobV2.metrics" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.48/qiskit_ibm_runtime/base_runtime_job.py#L154-L170" signature="metrics()">
    Return job metrics.

    **Returns**

    *   `timestamps`: Timestamps of when the job was created, started running, and finished.

    *   **`usage`: Details regarding job usage, the measurement of the amount of**

        time the QPU is locked for your workload.

    **Return type**

    A dictionary with job metrics including but not limited to the following

    **Raises**

    **IBMRuntimeError** – If a network error occurred.
  </Function>

  ### properties

  <Function id="qiskit_ibm_runtime.RuntimeJobV2.properties" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.48/qiskit_ibm_runtime/base_runtime_job.py#L201-L216" signature="properties(refresh=False)">
    Return the backend properties for this job.

    **Parameters**

    **refresh** (*bool*) – If `True`, re-query the server for the backend properties. Otherwise, return a cached version.

    **Returns**

    The backend properties used for this job, at the time the job started running, or `None` if properties are not available.

    **Return type**

    [BackendProperties](models-backend-properties "qiskit_ibm_runtime.models.BackendProperties") | None
  </Function>

  ### result

  <Function id="qiskit_ibm_runtime.RuntimeJobV2.result" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.48/qiskit_ibm_runtime/runtime_job_v2.py#L115-L160" signature="result(timeout=None, decoder=None, poll_interval=None)">
    Return the results of the job.

    **Parameters**

    *   **timeout** (*float | None*) – Number of seconds to wait for job.

    *   **decoder** (*type\[ResultDecoder] | Sequence\[type\[ResultDecoder]] | None*) – A `ResultDecoder` subclass used to decode job results, or a list of such subclasses. If more than one decoder is specified, they will be called in chain, with the output of the `n-th` decoder as the input of the `n+1-th` decoder.

    *   **poll\_interval** (*float | None*) –

        Number of seconds to wait between successive queries of the job’s status. of the job.

        *   For non-session jobs, the default is `500ms`, and the floor value is `100ms`.
        *   For session jobs, the default and the floor value are `100ms`.

    **Returns**

    Runtime job result (post-processed if applicable).

    **Raises**

    *   **RuntimeJobFailureError** – If the job failed.
    *   **RuntimeJobMaxTimeoutError** – If the job does not complete within given timeout.
    *   **RuntimeInvalidStateError** – If the job was cancelled, and attempting to retrieve result.

    **Return type**

    Any
  </Function>

  ### running

  <Function id="qiskit_ibm_runtime.RuntimeJobV2.running" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.48/qiskit_ibm_runtime/runtime_job_v2.py#L219-L221" signature="running()">
    Return whether the job is actively running.

    **Return type**

    bool
  </Function>

  ### status

  <Function id="qiskit_ibm_runtime.RuntimeJobV2.status" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.48/qiskit_ibm_runtime/runtime_job_v2.py#L177-L184" signature="status()">
    Return the status of the job.

    **Returns**

    Status of this job.

    **Return type**

    *Literal*\[‘INITIALIZING’, ‘QUEUED’, ‘RUNNING’, ‘CANCELLED’, ‘DONE’, ‘ERROR’]
  </Function>

  ### update\_tags

  <Function id="qiskit_ibm_runtime.RuntimeJobV2.update_tags" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.48/qiskit_ibm_runtime/base_runtime_job.py#L172-L199" signature="update_tags(new_tags)">
    Update the tags associated with this job.

    **Parameters**

    **new\_tags** (*list\[str]*) – New tags to assign to the job.

    **Returns**

    The new tags associated with this job.

    **Raises**

    **IBMApiError** – If an unexpected error occurred when communicating with the server or updating the job tags.

    **Return type**

    list\[str]
  </Function>

  ### usage

  <Function id="qiskit_ibm_runtime.RuntimeJobV2.usage" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.48/qiskit_ibm_runtime/base_runtime_job.py#L126-L152" signature="usage(partial=False)">
    Return job usage in seconds.

    By default, the job usage returned is `0` until the usage calculation is completed. Accumulated intermediate usage can be returned by the method by using the `partial` flag.

    <Admonition title="Note" type="note">
      When using `partial`, note that is not guaranteed that the final usage is returned as soon as the job is completed. It is recommended to invoke the method with `partial=False` for guarantees that the usage returned is final, or to use the [`metrics()`](#qiskit_ibm_runtime.RuntimeJobV2.metrics "qiskit_ibm_runtime.RuntimeJobV2.metrics") method for details on the completion status.
    </Admonition>

    **Parameters**

    **partial** (*bool*) – if `True`, return the accumulated intermediate usage thus far until final usage is reached.

    **Return type**

    float
  </Function>

  ### wait\_for\_final\_state

  <Function id="qiskit_ibm_runtime.RuntimeJobV2.wait_for_final_state" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.48/qiskit_ibm_runtime/runtime_job_v2.py#L244-L286" signature="wait_for_final_state(timeout=None, poll_interval=None)">
    Poll for the job status from the API until the status is in a final state.

    **Parameters**

    *   **timeout** (*float | None*) – Seconds to wait for the job. If `None`, wait indefinitely.

    *   **poll\_interval** (*float | None*) –

        Number of seconds to wait between querying the service for the status of the job.

        *   For non-session jobs, the default is `500ms`, and the floor value is `100ms`.
        *   For session jobs, the default and the floor value is `100ms`.

    **Raises**

    **RuntimeJobTimeoutError** – If the job does not complete within given timeout.

    **Return type**

    None
  </Function>
</Class>

